# fish_project

./: .gitignore  package-lock.json  package.json  start.sh  start_everything.sh  tsconfig.json  webpack.config.js
app/src/: .eslintrc.json  app.tsx  index.tsx
app/src/components/: FishSelector.tsx  SelectorEntry.tsx
app/src/components/generic/: Header.tsx  Modal.tsx  SearchBar.tsx
app/src/srvc/: fish.ts
app/src/style/: global.css
app/src/views/: PlantGrid.tsx
server/: activate.sh  pyproject.toml  requirements.txt  run.sh  run_tests.sh
server/server/: db.py  main.py
server/server/api/: common.py
server/server/api/fish/: fish.py  models.py
