[tool.poetry]
name = "server"
version = "0.1.0"
description = ""
authors = ["jarmeister99 <jarmeister99@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.82.0"
uvicorn = "^0.18.3"

[tool.black]
max-line-length = 79
extend-ignore = 'E203'

[tool.poetry.group.dev.dependencies]
mypy = "^0.971"
flake8 = "^5.0.4"
black = "^22.8.0"

[tool.poetry.scripts]
start = "server.main:start"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
